--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-css-globbing": "^0.1.8",
     "gulp-cssnano": "^2.1.1",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-jade": "^1.1.0",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
