--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test for artyou company",
   "main": "app/main.js",
   "scripts": {
-    "build": "webpack && gulp production",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
+    "build": "webpack -p && gulp production",
+    "dev": "webpack-dev-server --hot --inline --devtool eval --progress --colors --hot --content-base build"
   },
   "author": "Diel Duarte",
   "license": "MIT",
